deploy/k8s/gateway/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/issuer: keycloak-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
  labels:
    app: keycloak
    fullapp: famquest
  name: keycloak-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: keycloak.famquest.REPLACE_BASE_DOMAIN
    http:
      paths:
      - backend:
          service:
            name: keycloak-svc
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - keycloak.famquest.REPLACE_BASE_DOMAIN
    secretName: keycloak-issuer-secret
